<resources>
    <string name="app_name">My Application</string>
    <string-array name="Dose_name">
        <item>gel(s)</item>
        <item>Capsule(s)</item>
        <item>cachet(s)</item>
        <item>cream(s)</item>
        <item>dragee(s)</item>
        <item>imulsion(s)</item>
        <item>pack(s)</item>
        <item>gel(s)</item>
        <item>drop(s)</item>
    </string-array>
    <string name="bhekasana">Lie on your belly and reach back to grab your feet as in bow pose.Now through inhalation, lift up your chest and squeeze the shoulders towards each other. Fold your feet towards the hip region and let your hands hold the toes.Hold this pose for 5 breaths and then gradually release.</string>
    <string name="dhanurasana">This is also known as Bow pose.All you have to do here is to lie down on the floor with your belly touching the ground. Keep your hands besides your chest.Now take a deep breath and lift your legs and thighs up.At the same time, you have to try to catch your legs with your hands.Remain in this position for 30 seconds and release.</string>
    <string name="shalabhasana">Lie on your belly with your hands resting below your thighs while forehead and chin are resting on the floor.Now try to raise your left leg up to 10 inches.Keep your leg straight.Do not bend your knees.After that, try doing the same with your right leg too.At the final stage, do this with both your legs</string>
    <string name="weightLoss">1.EAT A BALANCED DIET.\n2.EAT NUTRITIOUS CALORIES.\n3.DON"'"T SKIP BREAKFAST .\n 4.SAY NO TO DRINKS.\n5.BODY FUEL-WATER.\n6.SLEEP WELL.</string>
    <string name="skin">1.EAT FRUITS AND VEGGIES.\n2.STAY HYDRATED.\n3.SIP ON SOME GREEN TEA.\n4.MUNCH ON NUTS.\n5.STAY STRESS FREE.\n6.MOISTURIZER TO RESCUE.</string>
    <string name="body">1.EAT TOMATOES,BROCCOLI AND DRIED FRUITS.\n2.EXERCISE DAILY.\n3.STAY HYDRATED.\n4.BEAUTY SLEEP.</string>
    <string name="title_activity_diet">dietActivity</string>
    <string name="tab_text_1">DIET 1</string>
    <string name="tab_text_2">DIET 2</string>
    <string name="tab_text_3">DIET 3</string>
    <string name="tab_text_4">DIET 4</string>
    <string name="dietday">This diet plan able to lose 5-10 pounds and help oneself achieve their desirable weight and body shape.The diet is also known as GM-Diet plan which was made for motor workers to stay fit and healthy.</string>
    <string name="day1">Let"s start with day one,on the first day of your diet you have to consume only fruits for the day as it is an all-fruit-day.Fruit not only help to lose weight but provide you with glowing and flawless skin and many nutrients required by your body.Any kind of fruits like  Berries, watermelons, and cantaloupes are recommended.(except Banana) and eat a small quantity but more often.I would suggest to indulge melons for the day as it will lose help to lose 1 pound of your weight on very first day.</string>
    <string name="day2">Like the first day,the second day is "AllVeggies day".You can eat nothing but only vegetables.Boiled or raw vegetables.You can even begin your day with a boiled potato and a tea spoon of butter.Only one potato this day enough,don"'"t consume more than that.Day 2 is a calorie free day with a good amount of fibre and nutrients.Use olive oil for cooking (no deep frying) the vegetables.</string>
    <string name="day3">Day 3 is a combination of day 1 and day 2.You can eat any quantity of fruits and vegetables and any amount of you like.Avoid potatoes and bananas as you are getting enough carbohydrates supply from fruits.</string>
    <string name="day4">Well on 4th day,Consume 8 (small) bananas and 4 glasses of milk (8 fluid ounces). Banana helps to replenish our energy levels and also act as a source of potassium and sodium.Choose skim milk and avoid adding sugar or sweeteners to milk.You may consume a bowl of clear vegetable which should consist of capsicum,onions,garlic and tomatoes.You can drink it only 1 time a day.Be careful and resist yourself.You are just 3 days away from your dream figure.</string>
    <string name="day5">On 4th day,you can take brown rice and Consume 6 large tomatoes.Non-vegetarians can consume chicken breast or fish.Vegetarians can consume tofu or cottage cheese.\n\n*Increase water intake by two glasses to flush out extra uric acid (chemical product of the breakdown of purines, which are found in meat).</string>
    <string name="day6">day 6 is a little different to day 5.No tomatoes on day 6,avoid them.You will already notice the change in your body by this time.</string>
    <string name="day7">THE LAST DAY OF your diet.You can have fresh fruits juice,one cup of brown rice or half bread and other vegetables you would want to eat.You can complete your day with the consumption of water.</string>
    <string name="diet2">This diet plan is very simple and helps you to sheds off extra pounds.So let"'"s get started..Here"'"s how you start your day for your journey off weight loss.</string>

</resources>