<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".diet1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/diet"
        android:id="@+id/layoutId"
        android:orientation="vertical">
    </LinearLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutId"
                android:text="THE 7 DAY DIET PLAN FOR WEIGHT LOSS"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="10dp"
                android:background="@color/colorPink"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dietday"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:paddingTop="10dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorDarkPink"
                    android:text="DAY 1"
                    android:textColor="@color/colorWhite"
                    android:paddingTop="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day1"
                    android:justificationMode="inter_word"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="10dp"
                    android:paddingTop="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorDarkPink"
                    android:text="DAY 2"
                    android:textColor="@color/colorWhite"
                    android:paddingTop="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day2"
                    android:justificationMode="inter_word"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="10dp"
                    android:paddingTop="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorDarkPink"
                    android:text="DAY 3"
                    android:textColor="@color/colorWhite"
                    android:paddingTop="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day3"
                    android:justificationMode="inter_word"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="10dp"
                    android:paddingTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorDarkPink"
                    android:text="DAY 4"
                    android:textColor="@color/colorWhite"
                    android:paddingTop="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day4"
                    android:justificationMode="inter_word"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="10dp"
                    android:paddingTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorDarkPink"
                    android:text="DAY 5"
                    android:textColor="@color/colorWhite"
                    android:paddingTop="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day5"
                    android:justificationMode="inter_word"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="10dp"
                    android:paddingTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorDarkPink"
                    android:text="DAY 6"
                    android:textColor="@color/colorWhite"
                    android:paddingTop="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day6"
                    android:justificationMode="inter_word"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="10dp"
                    android:paddingTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorDarkPink"
                    android:text="DAY 7"
                    android:textColor="@color/colorWhite"
                    android:paddingTop="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day7"
                    android:justificationMode="inter_word"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="10dp"
                    android:paddingTop="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>